Fix wrapping of dropdown labels in admin navigation

--- a/byceps/static/style/admin.css
+++ b/byceps/static/style/admin.css
@@ -213,7 +213,7 @@ main {
   margin: 0;
 }
 
-.button .sidebar-section-title {
+.sidebar-section-title.button {
   text-align: left;
   white-space: normal;
 }
